--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-redux": "^4.4.6",
     "redux": "^3.6.0",
     "redux-logger": "^2.7.4",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "mrn": "latest"
   },
   "jest": {
     "preset": "jest-react-native"
